--- a/examples/invaders/package.json
+++ b/examples/invaders/package.json
@@ -9,7 +9,7 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0",
-    "svelte-phaser": "*",
+    "svelte-phaser": "0.0.1-alpha.0",
     "svelte-fragment": "^1.0.1",
     "phaser": "^3.22.0"
   },
