--- a/examples/breakout/package.json
+++ b/examples/breakout/package.json
@@ -8,12 +8,12 @@
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0",
-    "svelte-phaser": "0.0.1-alpha.0",
-    "svelte-fragment": "^1.0.1",
-    "phaser": "^3.22.0"
+    "svelte-fragment": "^1.0.1"
   },
   "dependencies": {
+    "svelte": "^3.0.0",
+    "svelte-phaser": "0.0.1-alpha.0",
+    "phaser": "^3.22.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
