--- a/examples/invaders/package.json
+++ b/examples/invaders/package.json
@@ -7,13 +7,13 @@
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-terser": "^5.1.2"
+  },
+  "dependencies": {
     "svelte": "^3.0.0",
     "svelte-phaser": "0.0.1-alpha.0",
     "svelte-fragment": "^1.0.1",
-    "phaser": "^3.22.0"
-  },
-  "dependencies": {
+    "phaser": "^3.22.0",
     "sirv-cli": "^0.4.4"
   },
   "scripts": {
