--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,8 @@
   "version": "0.3.1",
   "dependencies": {
     "@svelte-docs/server": "^0.1.3",
-    "svelte-phaser": "0.0.1-alpha.1"
+    "svelte-phaser": "0.0.1-alpha.1",
+    "svelte-fragment": "1.0.1"
   },
   "devDependencies": {
     "@svelte-docs/core": "^0.9.1",
@@ -20,7 +21,7 @@
     "autobuild": "rollup -c node_modules/@svelte-docs/core/rollup.config.js -w",
     "dev": "run-p start:dev start:pagewatch autobuild",
     "start": "node node_modules/@svelte-docs/server",
-    "start:dev": "node node_modules/@svelte-docs/server --dev --single",
+    "start:dev": "node ./server --dev --single --cors",
     "start:pagewatch": "node node_modules/@svelte-docs/core/watcher",
     "deploy": "npm run build && node node_modules/@svelte-docs/publisher"
   }
