--- a/templates/blank/package.json
+++ b/templates/blank/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "blank-template",
   "version": "1.0.0",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
