first functioning test

--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -9,13 +9,26 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/svelte": "^3.0.0",
+    "babel-jest": "^26.0.1",
+    "canvas": "^2.6.1",
+    "datauri": "^3.0.0",
+    "eslint-plugin-jest": "^23.11.0",
+    "jest": "^26.0.1",
+    "jsdom": "^16.2.2",
     "rollup": "^1.20.0",
     "rollup-plugin-svelte": "^5.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-jester": "^1.0.5"
   },
   "keywords": [
     "svelte"
