--- a/docs/package.json
+++ b/docs/package.json
@@ -14,10 +14,11 @@
     "npm-run-all": "^4.1.5",
     "rollup": "^1.32.1",
     "svelte": "^3.21.0",
-    "phaser": "^3.22.0"
+    "phaser": "^3.23.0"
   },
   "scripts": {
-    "build": "rollup -c node_modules/@svelte-docs/core/rollup.config.js",
+    "clean": "rm -rf __DOCS__ && rm -rf dist",
+    "build": "yarn clean && rollup -c node_modules/@svelte-docs/core/rollup.config.js && mv __DOCS__/dist dist",
     "autobuild": "rollup -c node_modules/@svelte-docs/core/rollup.config.js -w",
     "dev": "run-p start:dev start:pagewatch autobuild",
     "start": "node node_modules/@svelte-docs/server",
