--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "clean:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
-    "build:netlify": "yarn build:docs && yarn build:examples",
+    "build": "yarn build:docs && yarn build:examples",
     "build:docs": "cd docs && yarn build",
     "build:examples": "(cd examples/breakout && yarn build); (cd examples/invaders && yarn build)",
     "test": "cd packages/svelte-phaser && yarn test",
