--- a/packages/svelte-phaser/.babelrc
+++ b/packages/svelte-phaser/.babelrc
@@ -1,5 +1,3 @@
 {
-  "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" }, "loose": true }]
-  ]
+  "presets": [["@babel/preset-env", { "targets": { "node": "current" } }]]
 }
