--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "scripts": {
     "clean:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
+    "deploy:site": "vercel --prod",
+    "deploy:site:staging": "vercel",
     "build": "yarn build:docs && yarn build:examples",
     "build:docs": "cd docs && yarn build",
     "build:examples": "(cd examples/breakout && yarn build); (cd examples/invaders && yarn build)",
