--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "scripts": {
     "clean:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
-    "deploy:site": "vercel --prod",
-    "deploy:site:staging": "vercel",
+    "deploy:site": "(vercel --prod); (cd examples && vercel --prod);",
+    "deploy:site:staging": "(vercel); (cd examples && vercel)",
     "build": "yarn build:docs && yarn build:examples",
     "build:docs": "cd docs && yarn build",
-    "build:examples": "(cd examples/breakout && yarn build); (cd examples/invaders && yarn build)",
+    "build:examples": "cd examples && yarn build",
     "test": "cd packages/svelte-phaser && yarn test",
     "lint": "yarn lint:packages && yarn lint:examples && yarn lint:docs",
     "lint:packages": "eslint packages --ext .js,.svelte --ignore-pattern node_modules",
