--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -1,9 +1,9 @@
 {
   "name": "svelte-phaser",
-  "version": "0.0.1-alpha.8",
+  "version": "0.0.1-alpha.9",
   "description": "Create Phaser 3 games with Svelte 3",
   "repository": "https://github.com/mattjennings/svelte-phaser",
-  "svelte": "src/svelte-phaser.js",
+  "svelte": "src/index.js",
   "module": "dist/svelte-phaser.mjs",
   "main": "dist/svelte-phaser.js",
   "browser": "dist/svelte-phaser.js",
