--- a/examples/breakout/package.json
+++ b/examples/breakout/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "svelte": "^3.0.0",
-    "svelte-phaser": "0.0.1-alpha.9",
+    "svelte-phaser": "0.0.1-rc.0",
     "svelte-fragment": "^1.0.1",
     "phaser": "^3.23.0",
     "sirv-cli": "^0.4.4"
