--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-phaser",
-  "version": "0.0.1-rc.0",
+  "version": "0.0.1",
   "description": "Create Phaser 3 games with Svelte 3",
   "repository": "https://github.com/mattjennings/svelte-phaser",
   "svelte": "src/index.js",
