remove build, change main to point to index.mjs

--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -1,20 +1,17 @@
 {
   "name": "svelte-phaser",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "Create Phaser 3 games with Svelte 3",
   "repository": "https://github.com/mattjennings/svelte-phaser",
-  "svelte": "src/index.js",
-  "module": "dist/svelte-phaser.mjs",
-  "main": "dist/svelte-phaser.js",
+  "svelte": "src/index.mjs",
+  "main": "src/index.mjs",
   "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run test",
     "test": "NODE_ENV=test jest",
     "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
-    "@rollup/plugin-node-resolve": "^6.0.0",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/svelte": "^3.0.0",
     "babel-jest": "^26.0.1",
@@ -22,9 +19,6 @@
     "datauri": "^3.0.0",
     "jest": "^26.0.1",
     "jsdom": "^16.2.2",
-    "node-eval": "^2.0.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-svelte": "^5.0.0",
     "svelte": "^3.0.0",
     "svelte-jester": "^1.0.5"
   },
