--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "version": "0.3.1",
   "dependencies": {
     "@svelte-docs/server": "^0.1.3",
-    "svelte-phaser": "0.0.2",
+    "svelte-phaser": "0.0.3-alpha.0",
     "svelte-fragment": "1.0.1"
   },
   "devDependencies": {
