--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -1,13 +1,14 @@
 {
   "name": "svelte-phaser",
-  "version": "0.0.3-alpha.1",
+  "version": "0.0.3",
   "description": "Create Phaser 3 games with Svelte 3",
   "repository": "https://github.com/mattjennings/svelte-phaser",
   "svelte": "src/index.mjs",
   "main": "src/index.mjs",
   "scripts": {
-    "publish": "yarn publish --tag latest",
-    "publish:next": "yarn publish --tag next",
+    "publish": "echo \"use publish:prod or publish:next\" && exit 1",
+    "publish:prod": "npm publish --tag latest",
+    "publish:next": "npm publish --tag next",
     "prepublishOnly": "npm run test",
     "test": "NODE_ENV=test jest",
     "test:watch": "npm run test -- --watch"
