--- a/templates/snowpack/package.json
+++ b/templates/snowpack/package.json
@@ -12,6 +12,6 @@
     "snowpack": "^2.0.0-0",
     "svelte": "^3.0.0",
     "svelte-fragment": "^1.0.1",
-    "svelte-phaser": "0.0.3-alpha.1"
+    "svelte-phaser": "0.0.3"
   }
 }
