--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -6,11 +6,11 @@
   "svelte": "src/index.mjs",
   "main": "src/index.mjs",
   "scripts": {
-    "publish:prod": "npm publish --tag latest",
-    "publish:next": "npm publish --tag next",
-    "prepublishOnly": "npm run test",
+    "publish:prod": "yarn publish --tag latest",
+    "publish:next": "yarn publish --tag next",
+    "prepublishOnly": "yarn test",
     "test": "NODE_ENV=test jest",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "yarn test -- --watch"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
