--- a/templates/snowpack/package.json
+++ b/templates/snowpack/package.json
@@ -1,17 +1,12 @@
 {
   "scripts": {
-    "prepare": "snowpack",
+    "prepare": "snowpack prepare",
     "start": "snowpack dev",
     "build": "snowpack build"
   },
   "webDependencies": {},
   "devDependencies": {
-    "@snowpack/app-scripts-svelte": "^0.6.1",
-    "phaser": "^3.23.0",
-    "rollup-plugin-svelte": "^5.2.2",
-    "snowpack": "^2.0.0-0",
-    "svelte": "^3.0.0",
-    "svelte-fragment": "^1.0.1",
-    "svelte-phaser": "latest"
+    "@snowpack/app-scripts-svelte": "^2.0.0",
+    "snowpack": "^2.9.0"
   }
 }
