--- a/examples/platformer/package.json
+++ b/examples/platformer/package.json
@@ -2,22 +2,16 @@
   "name": "platformer",
   "version": "1.0.0",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2"
-  },
-  "dependencies": {
-    "svelte": "^3.0.0",
-    "svelte-phaser": "0.0.6",
+    "@snowpack/app-scripts-svelte": "^2.0.0",
+    "@testing-library/svelte": "^3.0.3",
     "phaser": "^3.23.0",
-    "sirv-cli": "^0.4.4"
+    "snowpack": "^3.0.11",
+    "svelte": "^3.0.0",
+    "svelte-phaser": "^0.0.6"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
+    "prepare": "snowpack",
+    "start": "snowpack dev",
+    "build": "snowpack build"
   }
 }
