--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -1,11 +1,17 @@
 {
   "name": "svelte-phaser",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "Create Phaser 3 games with Svelte 3",
   "repository": "https://github.com/mattjennings/svelte-phaser",
-  "svelte": "src/index.mjs",
-  "main": "src/index.mjs",
+  "svelte": "dist/index.js",
+  "module": "dist/index.mjs",
+  "main": "dist/index.umd.js",
+  "types": "dist/ts/index.d.ts",
   "scripts": {
+    "prebuild": "rm -rf ./dist",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "validate": "svelte-check",
     "publish:prod": "yarn publish --tag latest",
     "publish:next": "yarn publish --tag next",
     "prepublishOnly": "yarn test",
@@ -21,8 +27,23 @@
     "datauri": "^3.0.0",
     "jest": "^26.0.1",
     "jsdom": "^16.2.2",
-    "svelte": "^3.0.0",
-    "svelte-jester": "^1.0.5"
+    "svelte": "^3.32.2",
+    "svelte-jester": "^1.0.5",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "phaser": "^3.23.0",
+    "fs-extra": "^9.0.1",
+    "glob": "^7.1.6",
+    "rollup": "^2.32.0",
+    "rollup-plugin-execute": "^1.1.1",
+    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-svelte": "^6.0.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte-check": "^1.0.60",
+    "svelte-preprocess": "^4.5.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "svelte"
