convert tests to typescript

--- a/packages/svelte-phaser/tsconfig.build.json
+++ b/packages/svelte-phaser/tsconfig.build.json
@@ -2,8 +2,7 @@
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
     "sourceMap": true,
-    "esModuleInterop": true,
-    "types": ["svelte", "jest", "phaser", "node"]
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules/*"]
