--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -20,28 +20,31 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/svelte": "^3.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
     "babel-jest": "^26.0.1",
     "canvas": "^2.6.1",
     "datauri": "^3.0.0",
-    "jest": "^26.0.1",
-    "jsdom": "^16.2.2",
-    "svelte": "^3.32.2",
-    "svelte-jester": "^1.0.5",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@tsconfig/svelte": "^1.0.10",
-    "phaser": "^3.23.0",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
+    "jest": "^26.0.1",
+    "jsdom": "^16.2.2",
+    "phaser": "^3.23.0",
     "rollup": "^2.32.0",
     "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-filesize": "^9.0.2",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.32.2",
     "svelte-check": "^1.0.60",
+    "svelte-jester": "^1.3.0",
     "svelte-preprocess": "^4.5.1",
+    "ts-jest": "^26.5.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
