--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     ]
   },
   "resolutions": {
-    "svelte": "^3.32.0"
+    "svelte": "^3.32.0",
+    "phaser": "3.24.1"
   },
   "devDependencies": {
     "eslint": "6.8.0",
