--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -9,7 +9,7 @@
   "types": "dist/ts/index.d.ts",
   "scripts": {
     "prebuild": "rm -rf ./dist",
-    "build": "rollup -c",
+    "build": "tsc --outDir ./dist --declaration && node scripts/preprocess.js",
     "dev": "rollup -c -w",
     "validate": "svelte-check --threshold error",
     "publish:prod": "yarn publish --tag latest",
@@ -18,8 +18,12 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "yarn test -- --watch"
   },
+  "peerDependencies": {
+    "phaser": "^3.23.0"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@testing-library/jest-dom": "^5.7.0",
@@ -38,6 +42,7 @@
     "rollup": "^2.32.0",
     "rollup-plugin-execute": "^1.1.1",
     "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-node-externals": "^2.2.0",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.32.2",
