--- a/packages/svelte-phaser/tsconfig.build.json
+++ b/packages/svelte-phaser/tsconfig.build.json
@@ -2,8 +2,9 @@
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules/*"]
+  "exclude": ["node_modules/*", "**/*.spec.*", "src/test-utils/*"]
 }
