--- a/packages/svelte-phaser/package.json
+++ b/packages/svelte-phaser/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "prebuild": "rm -rf ./dist",
     "build": "tsc --outDir ./dist --declaration && node scripts/preprocess.js",
-    "dev": "rollup -c -w",
+    "dev": "nodemon --exec \"yarn build\" --watch src -e js,ts,svelte",
     "validate": "svelte-check --threshold error",
     "publish:prod": "yarn publish --tag latest",
     "publish:next": "yarn publish --tag next",
@@ -23,9 +23,6 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.9.6",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/svelte": "^3.0.0",
     "@tsconfig/svelte": "^1.0.10",
@@ -38,13 +35,8 @@
     "glob": "^7.1.6",
     "jest": "^26.0.1",
     "jsdom": "^16.2.2",
+    "nodemon": "^2.0.7",
     "phaser": "^3.23.0",
-    "rollup": "^2.32.0",
-    "rollup-plugin-execute": "^1.1.1",
-    "rollup-plugin-filesize": "^9.0.2",
-    "rollup-plugin-node-externals": "^2.2.0",
-    "rollup-plugin-svelte": "^6.0.1",
-    "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.32.2",
     "svelte-check": "^1.0.60",
     "svelte-jester": "^1.3.0",
