--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "version": "0.3.1",
   "dependencies": {
     "@svelte-docs/server": "^0.1.6",
-    "svelte-phaser": "0.0.6",
+    "svelte-phaser": "*",
     "svelte-fragment": "1.0.1"
   },
   "devDependencies": {
@@ -13,7 +13,7 @@
     "@svelte-docs/themes": "^1.0.1",
     "npm-run-all": "^4.1.5",
     "svelte": "^3.32.0",
-    "phaser": "^3.23.0"
+    "phaser": "^3.52.0"
   },
   "scripts": {
     "clean": "rm -rf __DOCS__",
