--- a/examples/breakout/package.json
+++ b/examples/breakout/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "breakout",
-  "version": "1.0.0",
-  "devDependencies": {
-    "@snowpack/app-scripts-svelte": "^2.0.0",
-    "@testing-library/svelte": "^3.0.3",
-    "phaser": "^3.52.0",
-    "snowpack": "^3.0.11",
-    "svelte": "^3.0.0",
-    "svelte-phaser": "^0.0.6"
-  },
+  "name": "breakout2",
+  "version": "0.0.0",
   "scripts": {
-    "prepare": "snowpack",
-    "start": "snowpack dev",
-    "build": "snowpack build"
+    "validate": "svelte-check && tsc --noEmit",
+    "dev": "svite -ts",
+    "build": "svite build -ts"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@tsconfig/svelte": "^1.0.10",
+    "svelte-check": "^1.1.15",
+    "svelte-preprocess": "^4.6.1",
+    "svelte": "^3.29.7",
+    "svelte-hmr": "^0.11.6",
+    "svite": "^0.8.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.2",
+    "svelte-phaser": "^0.1.0",
+    "phaser": "^3.52.0"
   }
 }
