add svite and svite-ts templates, rename blank template to rollup

--- a/templates/rollup/package.json
+++ b/templates/rollup/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blank-template",
+  "name": "rollup-template",
   "version": "1.0.0",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
