--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "resolutions": {
     "svelte": "^3.32.0",
-    "phaser": "^3.52.0"
+    "phaser": "^3.52.0",
+    "svelte-phaser": "*"
   },
   "devDependencies": {
     "eslint": "6.8.0",
