--- a/templates/svite-typescript/package.json
+++ b/templates/svite-typescript/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svite-ts-template",
-  "version": "0.0.0",
+  "name": "svite-typescript-template",
+  "version": "0.0.1",
   "scripts": {
     "validate": "svelte-check && tsc --noEmit",
     "dev": "svite -ts",
@@ -9,9 +9,9 @@
   "dependencies": {},
   "devDependencies": {
     "@tsconfig/svelte": "^1.0.10",
-    "svelte-check": "^1.1.15",
-    "svelte-preprocess": "^4.6.1",
-    "svelte": "^3.29.7",
+    "svelte-check": "^1.1.34",
+    "svelte-preprocess": "^4.6.8",
+    "svelte": "^3.32.3",
     "svelte-hmr": "^0.11.6",
     "svite": "^0.8.1",
     "tslib": "^2.0.3",
