--- a/examples/html/package.json
+++ b/examples/html/package.json
@@ -1,17 +1,22 @@
 {
   "name": "html",
-  "version": "1.0.0",
-  "devDependencies": {
-    "@snowpack/app-scripts-svelte": "^2.0.0",
-    "@testing-library/svelte": "^3.0.3",
-    "phaser": "^3.52.0",
-    "snowpack": "^3.0.11",
-    "svelte": "^3.0.0",
-    "svelte-phaser": "^0.1.0"
-  },
+  "version": "0.0.1",
   "scripts": {
-    "prepare": "snowpack",
-    "start": "snowpack dev",
-    "build": "snowpack build"
+    "validate": "svelte-check && tsc --noEmit",
+    "dev": "svite -ts",
+    "build": "svite build -ts"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@tsconfig/svelte": "^1.0.10",
+    "svelte-check": "^1.1.34",
+    "svelte-preprocess": "^4.6.8",
+    "svelte": "^3.32.3",
+    "svelte-hmr": "^0.11.6",
+    "svite": "^0.8.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.2",
+    "phaser": "^3.52.0",
+    "svelte-phaser": "latest"
   }
 }
