--- a/examples/breakout/package.json
+++ b/examples/breakout/package.json
@@ -16,7 +16,7 @@
     "svite": "^0.8.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
-    "svelte-phaser": "^0.1.0",
+    "svelte-phaser": "next",
     "phaser": "^3.52.0"
   }
 }
