--- a/examples/video/package.json
+++ b/examples/video/package.json
@@ -7,7 +7,7 @@
     "phaser": "^3.52.0",
     "snowpack": "^3.0.11",
     "svelte": "^3.0.0",
-    "svelte-phaser": "^0.1.0"
+    "svelte-phaser": "next"
   },
   "scripts": {
     "prepare": "snowpack",
