fix deploy script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean:node_modules": "find . -name \"node_modules\" -exec rm -rf '{}' +",
     "deploy:site:prod": "(vercel --prod); (cd examples && vercel --prod);",
     "deploy:site:staging": "(vercel); (cd examples && vercel)",
-    "build": "yarn build:docs && yarn build:examples",
+    "build": "yarn build:svelte-phaser && yarn build:docs && yarn build:examples",
+    "build:svelte-phaser": "cd packages/svelte-phaser && yarn build",
     "build:docs": "cd docs && yarn build",
     "build:examples": "cd examples && yarn build",
     "test": "cd packages/svelte-phaser && yarn test",
