--- a/docs/package.json
+++ b/docs/package.json
@@ -2,12 +2,9 @@
   "private": true,
   "name": "docs",
   "version": "0.3.1",
-  "dependencies": {
-    "@svelte-docs/server": "^0.1.6",
-    "svelte-phaser": "latest",
-    "svelte-fragment": "1.0.1"
-  },
   "devDependencies": {
+    "@svelte-docs/server": "^0.1.6",
+    "svelte-phaser": "0.1.0-beta.1",
     "@svelte-docs/core": "^0.10.13",
     "@svelte-docs/publisher": "^0.2.3",
     "@svelte-docs/themes": "^1.0.1",
