--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
   "resolutions": {
     "svelte": "^3.32.0",
     "phaser": "^3.52.0",
-    "svelte-phaser": "*"
+    "svelte-phaser": "0.1.0-beta.2"
   },
   "devDependencies": {
     "eslint": "6.8.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "eslint-plugin-jest": "^23.11.0",
     "prettier": "^2.0.5",
-    "svelte": "^3.32.0"
+    "svelte": "^3.32.0",
+    "nodemon": "^2.0.7"
   },
   "keywords": [
     "svelte",
