--- a/templates/vite-ts/package.json
+++ b/templates/vite-ts/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "svite-typescript-template",
+  "name": "vite-ts-template",
   "version": "0.0.1",
   "scripts": {
     "validate": "svelte-check && tsc --noEmit",
-    "dev": "svite -ts",
-    "build": "svite build -ts"
+    "dev": "vite",
+    "prebuild": "validate",
+    "build": "vite build"
   },
   "dependencies": {},
   "devDependencies": {
+    "@svitejs/vite-plugin-svelte": "^0.11.0",
     "@tsconfig/svelte": "^1.0.10",
+    "phaser": "^3.52.0",
     "svelte-check": "^1.1.34",
+    "svelte-phaser": "latest",
     "svelte-preprocess": "^4.6.8",
     "svelte": "^3.32.3",
-    "svelte-hmr": "^0.11.6",
-    "svite": "^0.8.1",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
-    "phaser": "^3.52.0",
-    "svelte-phaser": "latest"
+    "vite": "^2.0.5"
   }
 }
