--- a/examples/breakout/package.json
+++ b/examples/breakout/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "breakout2",
+  "name": "breakout",
   "version": "0.0.0",
   "scripts": {
     "validate": "svelte-check && tsc --noEmit",
-    "dev": "svite -ts",
-    "build": "svite build -ts"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {},
   "devDependencies": {
+    "@svitejs/vite-plugin-svelte": "^0.11.0",
     "@tsconfig/svelte": "^1.0.10",
-    "svelte-check": "^1.1.15",
-    "svelte-preprocess": "^4.6.1",
-    "svelte": "^3.29.7",
-    "svelte-hmr": "^0.11.6",
-    "svite": "^0.8.1",
+    "phaser": "^3.52.0",
+    "svelte-check": "^1.1.34",
+    "svelte-phaser": "latest",
+    "svelte-preprocess": "^4.6.8",
+    "svelte": "^3.32.3",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2",
-    "svelte-phaser": "next",
-    "phaser": "^3.52.0"
+    "vite": "^2.0.5"
   }
 }
