remove snowpack & rollup templates, rename vite templates

--- a/templates/typescript/package.json
+++ b/templates/typescript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-ts-template",
+  "name": "svelte-phaser-typescript-template",
   "version": "0.0.1",
   "scripts": {
     "validate": "svelte-check && tsc --noEmit",
